# probLM-solver

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  TODO.md  docker-compose.yml  environment-hec.yml  environment.yml  mkdocs.yml  pyproject.toml
.pi/skills/report/: SKILL.md
docs/: Makefile  api.rst  background.rst  conf.py  index.md  index.rst  r_tutorial.rst  reproducibility_tutorial.rst  tutorial_template.rst  tutorials.rst
reports/: pytest.xml
src/problm-solver/: cli.py  data.py  gen_data.py  llama_interface.py
src/problm_solver/: __init__.py  adjust_probs.py  cli.py  constants.py  data.py  llama_interface.py  utils.py
src/problm_solver/analysis/: __init__.py  probabilities.py  tokenizer.py
src/problm_solver/datasets/: __init__.py  math500.py
src/problm_solver/random/: __init__.py  random.py  resolve.py  types.py
tests/: __init__.py  test_adjust_probs.py  test_cli.py  test_data.py  test_import.py  test_llama_interface.py  test_probabilities.py  test_random.py
